# APRS_ros2_demo_sim

./: README.md
aprs_description/: CMakeLists.txt  package.xml
aprs_description/config/: all_robot_controllers.yaml  fanuc_initial_positions.yaml  motoman_initial_positions.yaml  ns_robot_controllers.yaml  robot_controllers.yaml
aprs_description/config/individual_controllers/: fanuc_controller.yaml  franka_controller.yaml  motoman_controller.yaml  ur_controller.yaml
aprs_description/launch/: load_aprs_robots.launch.py  load_aprs_robots_ns.launch.py  load_fanuc.launch.py  load_franka.launch.py  load_motoman.launch.py  load_ur.launch.py  world.launch.py
aprs_description/urdf/: aprs_fanuc.urdf.xacro  aprs_franka.urdf.xacro  aprs_lab_robots.urdf.xacro  aprs_motoman.urdf.xacro  aprs_ur.urdf.xacro  output.urdf  temp.urdf
aprs_description/urdf/fanuc/: aprs_fanuc.ros2_control.xacro  aprs_fanuc_macro.xacro  fanuc_lrmate200id_macro.xacro
aprs_description/urdf/franka/: aprs_franka.ros2_control.xacro  aprs_franka_macro.xacro  franka_arm.xacro  franka_hand.xacro
aprs_description/urdf/motoman/: aprs_motoman.ros2_control.xacro  aprs_motoman_macro.xacro  motoman_sia20_macro.xacro
aprs_description/urdf/ur/: aprs_ur.ros2_control.xacro  aprs_ur_macro.xacro
aprs_description/urdf/vacuum_gripper/: vacuum_grippper_macro.xacro
aprs_gz_plugins/: CMakeLists.txt
aprs_gz_plugins/src/: conveyor_plugin.cpp
aprs_gz_sim/: CMakeLists.txt  package.xml
aprs_gz_sim/aprs_gz_sim/: evironment_startup.py  spawn_params.py
aprs_gz_sim/gz_models/conveyor_belt/: model.sdf
aprs_gz_sim/gz_models/optical_table/: model.sdf
aprs_gz_sim/hooks/: aprs_gz_sim.dsv.in
aprs_gz_sim/include/aprs_gz_sim/: spawn_part.hpp
aprs_gz_sim/launch/: combined_description.launch.py  environment.launch.py  seperate_description.launch.py  test.launch.py
aprs_gz_sim/models/large_gear/: model.sdf
aprs_gz_sim/models/large_gear_tray/: model.sdf
aprs_gz_sim/models/m2l1_kit_tray/: model.sdf
aprs_gz_sim/models/medium_gear/: model.sdf
aprs_gz_sim/models/medium_gear_tray/: model.sdf
aprs_gz_sim/models/s2l2_kit_tray/: model.sdf
aprs_gz_sim/models/small_gear/: model.sdf
aprs_gz_sim/models/small_gear_tray/: model.sdf
aprs_gz_sim/nodes/: environment_startup_node.py  spawn_part_node.cpp
aprs_gz_sim/src/: spawn_part.cpp
aprs_gz_sim/worlds/: lab.sdf
aprs_interfaces/: CMakeLists.txt  package.xml
aprs_interfaces/srv/: MoveCartesian.srv  PickPart.srv  SpawnPart.srv
ariac_msgs/: package.xml
docker/: Dockerfile
moveit_configs/aprs_fanuc_moveit_config/: CMakeLists.txt  package.xml
moveit_configs/aprs_fanuc_moveit_config/config/: aprs_fanuc.srdf  aprs_lab_robots.srdf  controllers.yaml  joint_limits.yaml  kinematics.yaml  moveitpy_config.yaml  ompl_planning.yaml
moveit_configs/aprs_fanuc_moveit_config/launch/: fanuc_move_group.launch.py
moveit_configs/aprs_franka_moveit_config/: CMakeLists.txt  package.xml
moveit_configs/aprs_franka_moveit_config/config/: aprs_franka.srdf  aprs_lab_robots.srdf  controllers.yaml  joint_limits.yaml  kinematics.yaml  moveitpy_config.yaml  ompl_planning.yaml
moveit_configs/aprs_motoman_moveit_config/: CMakeLists.txt  package.xml
moveit_configs/aprs_moveit_config/: CMakeLists.txt  package.xml
moveit_configs/aprs_ur_moveit_config/: CMakeLists.txt  package.xml
(+26 files in other folders)
